# CSGOptiXGGeo

./: CMakeLists.txt  CSGOptiXGGeo.cc  CSGOptiXGGeo.sh  CSGOptiXGGeoConvert.cc  CSGOptiXGGeoRender.cc  Converter.cc  Converter.h  build.sh  env.sh  go.sh  grab.sh  out.py  run.sh
